--- a/slides/2022-09-06-graphql-fullstack.html
+++ b/slides/2022-09-06-graphql-fullstack.html
@@ -1171,8 +1171,7 @@ The default GraphQlSource builder enables support for a
   * Die Schema-Mapping-Funktion soll asynchron funktionieren
   * Der `UserService` ist bereits implementiert
 * Der folgende Query sollte dann einen User zurückliefern:
-
-<pre class="fragment"><code class="graphql">
+* ```graphql
   query {
     story(storyId: 1) {
       id 
@@ -1187,7 +1186,7 @@ The default GraphQlSource builder enables support for a
       }
     }
   }
-</code></pre>
+  ```
 
 * Eine mögliche Lösung findest Du in `steps/15_schema-mapping`
 
